automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Your Title Goes Here</title>
+    <title>All About Scarlett</title>
     <link rel="stylesheet" href="css/style.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Cabin+Sketch|Courgette|Josefin+Slab|Raleway|Satisfy" rel="stylesheet">
+</head>
+
   <body>
-    <!-- Design Your Site Here! -->
+    <div class='navbar'>
+      <nav>
+        <li class='navigation'><a href='etsy.html'>Etsy</a></li>
+        <li class='navigation'><a href='https://scarlettsart.herokuapp.com/'>My Webapp</a></li>
+      </nav>
+    </div>
+    <h1 align='center'>Welcome!</h1>
+    <h2>Hobbies</h2>
+      <p>I have many hobbies, ranging from being an entrepeneur to having fun with my friends. <br>I like running my etsy shop and I sell duck tape products and custom TOMS or Converse. <br>I also like playing with my two dogs. I love playing basketball and being active. In school <br>my favorite subject is math and I'm going to be in an accelerated math course. I've also made <br>my own webapp using ruby, html, css, and sinatra.</p>
+    <h2>Favorite Foods</h2>
+      <ul>
+        <li>Chinese</li>
+        <li>Sushi</li>
+        <li>Pizza</li>
+        <li>Chicken Noodle Soup</li>
+      </ul>
   </body>
 </html>
